web-api-gw-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: web-api-gw-vs
spec:
  hosts:
  - "hellocloud.io"
  gateways:
  - web-api-gateway  #Choose virtual GW that Virtual service will use. 
  http:
  - route:
    - destination:
        host: web-api.istio-in-action.svc.cluster.local #use the web-api app's svc name
        port:
          number: 8080
